--- a/index.html
+++ b/index.html
@@ -1,361 +1,10 @@
 <!DOCTYPE html>
-<html lang="id">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Victornz Memories</title>
-<style>
-  body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-image: url('background1.png');
-    background-size: 128px;
-    background-repeat: repeat;
-    background-position: center;
-    min-height: 100vh;
-    overflow-x: hidden;
-  }
-
-  .gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(110px, 1fr));
-    gap: 50px;
-    justify-items: center;
-    padding: 30px;
-    position: relative;
-    z-index: 0;
-    --line-start: 26px;
-    --line-gap: 168px;
-  }
-
-  .line {
-    position: absolute;
-    height: 3px;
-    background-color: red;
-    left: 26%;
-    width: 48%;
-    z-index: 1;
-    border-radius: 5px;
-    transition: top 0.3s ease;
-  }
-
-  .photo {
-    width: 120px;
-    height: 90px;
-    background-color: white;
-    border: 6px solid white;
-    border-top-width: 22px;
-    box-shadow: 0 5px 10px rgba(0,0,0,0.3);
-    transform: rotate(var(--rotate));
-    transform-origin: 50% -20px;
-    cursor: pointer;
-    position: relative;
-    z-index: 0;
-    overflow: visible;
-  }
-
-  .photo img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    box-shadow: inset 0 0 15px rgba(0,0,0,0.5);
-  }
-
-  .photo-title {
-    position: absolute;
-    top: -20px;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 14px;
-    color: gray;
-    font-weight: bold;
-  }
-
-  .photo-date {
-    position: absolute;
-    bottom: -18px;
-    right: -4px;
-    font-size: 0px;
-  }
-
-  .pin {
-    width: 10px;
-    height: 10px;
-    background-color: red;
-    border-radius: 50%;
-    position: absolute;
-    top: -28px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 15;
-    box-shadow: 0px 0px 2px black;
-  }
-
-  .title-logo {
-    position: relative;
-    width: 360px;
-    display: block;
-    margin: 30px auto 10px;
-    filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.4));
-    transition: all 0.3s ease;
-    cursor: pointer;
-  }
-
-  .title-logo:hover { transform: scale(1.05); }
-
-  .add-btn {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    width: 60px;
-    height: 60px;
-    border: none;
-    border-radius: 50%;
-    background-color: #4CAF50;
-    color: white;
-    font-size: 36px;
-    cursor: pointer;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.4);
-    display: none;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .menu-btn {
-    position: absolute;
-    top: -24px;
-    right: -10px;
-    font-size: 18px;
-    color: black;
-    cursor: pointer;
-    z-index: 20;
-    width: 24px;
-    height: 24px;
-    display: none;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .context-menu {
-    position: absolute;
-    top: 28px;
-    right: 0;
-    display: none;
-    flex-direction: column;
-    background: white;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    box-shadow: 0 3px 10px rgba(0,0,0,0.2);
-    z-index: 25;
-    overflow: hidden;
-  }
-
-  .context-menu button {
-    background: none;
-    border: none;
-    padding: 8px 12px;
-    text-align: left;
-    width: 100%;
-    cursor: pointer;
-    font-size: 14px;
-  }
-
-  .context-menu button:hover { background-color: #eee; }
-
-  /* LIGHTBOX */
-  #lightbox {
-    display: none;
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.8);
-    justify-content: center;
-    align-items: center;
-    z-index: 9998;
-  }
-
-  .lightbox-content {
-    background: white;
-    padding: 10px;
-    border-radius: 0px;
-    box-shadow: 0 0 30px rgba(0,0,0,0.6);
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    max-width: 80%;
-  }
-
-  .lightbox-header {
-    background: white;
-    padding: 0px;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  #lightboxTitle {
-    color: gray;
-    font-weight: bold;
-    font-size: 20px;
-  }
-
-  #closeLightbox {
-    color: gray;
-    position: absolute;
-    right: 10px;
-    top: 5px;
-    cursor: pointer;
-    font-size: 18px;
-  }
-
-  .lightbox-content img { max-width: 100%; max-height: 80vh; display: block; }
-</style>
-</head>
-<body>
-
-<h1>
-  <img src="title2.png" alt="Victornz Memories" class="title-logo" id="titleLogo">
-</h1>
-
-<div class="gallery" id="gallery"></div>
-
-<!-- Lightbox -->
-<div id="lightbox">
-  <div class="lightbox-content">
-    <div class="lightbox-header">
-      <div id="lightboxTitle">Judul Foto</div>
-      <span id="closeLightbox">✖</span>
-    </div>
-    <img id="lightboxImg" src="">
-  </div>
-</div>
-
-<button class="add-btn" id="addBtn">+</button>
-
-<script>
-const IAJ='T',PAL='T',JSK='Y',IRH='S',PQH='Z',NDH='K',ZHS='N';
-function calculateLayout(){ return JSK+ZHS+IAJ+NDH+PAL+IRH+PQH; }
-
-let countNumber=false;
-let clickCount=0;
-
-const titleLogo=document.getElementById('titleLogo');
-titleLogo.addEventListener('click',()=>{
-  clickCount++;
-  if(clickCount>=7 && !countNumber){
-    clickCount=0;
-    const input=prompt('...');
-    if(input===calculateLayout()){
-      countNumber=true;
-      document.getElementById('addBtn').style.display='flex';
-      renderPhotos();
-    }
-  }
-});
-
-/* ==== GALLERY & LIGHTBOX ==== */
-const gallery = document.getElementById('gallery');
-const lightbox = document.getElementById('lightbox');
-const lightboxImg = document.getElementById('lightboxImg');
-const lightboxTitle = document.getElementById('lightboxTitle');
-const closeLightbox = document.getElementById('closeLightbox');
-const addBtn = document.getElementById('addBtn');
-
-let photos = JSON.parse(localStorage.getItem('victornzPhotos'))||[];
-let currentMenu=null;
-
-function renderPhotos(){
-  gallery.innerHTML='';
-  photos.forEach((photo,index)=>{
-    const container=document.createElement('div');
-    container.className='photo';
-    container.style.setProperty('--rotate',`${Math.random()*10-5}deg`);
-
-    const pin=document.createElement('div'); pin.className='pin';
-    const img=document.createElement('img'); img.src=photo.url;
-    const title=document.createElement('div'); title.className='photo-title'; title.textContent=photo.title||'Judul Foto';
-    const date=document.createElement('div'); date.className='photo-date'; date.textContent=photo.date||'';
-
-    const menuBtn=document.createElement('div'); menuBtn.className='menu-btn'; menuBtn.textContent='⋮';
-    if(countNumber) menuBtn.style.display='flex';
-
-    const contextMenu=document.createElement('div'); contextMenu.className='context-menu';
-    const renameBtn=document.createElement('button'); renameBtn.textContent='Ubah Nama';
-    const changeBtn=document.createElement('button'); changeBtn.textContent='Ubah Foto';
-    const deleteBtn=document.createElement('button'); deleteBtn.textContent='Hapus';
-    contextMenu.append(renameBtn,changeBtn,deleteBtn);
-
-    container.append(pin,img,title,date,menuBtn,contextMenu);
-
-    // menu tombol
-    menuBtn.addEventListener('click',(e)=>{
-      e.stopPropagation();
-      if(currentMenu && currentMenu!==contextMenu) currentMenu.style.display='none';
-      contextMenu.style.display = contextMenu.style.display==='flex'?'none':'flex';
-      currentMenu=contextMenu;
-    });
-
-    // aksi tombol menu
-    renameBtn.addEventListener('click',()=>{
-      const newTitle=prompt('Ubah judul foto:',photo.title);
-      if(newTitle!==null){ photo.title=newTitle; saveAndRender(); }
-    });
-    changeBtn.addEventListener('click',()=>{
-      const newFile=prompt('Masukkan nama file foto baru (misal foto.png):');
-      if(newFile){ photo.url=newFile; saveAndRender(); }
-    });
-    deleteBtn.addEventListener('click',()=>{
-      if(confirm('Yakin ingin menghapus foto ini?')){ photos.splice(index,1); saveAndRender(); }
-    });
-
-    // klik foto -> lightbox
-    container.addEventListener('click',(e)=>{
-      if(e.target!==menuBtn){
-        lightboxImg.src=photo.url;
-        lightboxTitle.textContent=photo.title||'Tanpa Judul';
-        lightbox.style.display='flex';
-      }
-    });
-
-    gallery.appendChild(container);
-  });
-  setTimeout(updateLines,100);
-}
-
-function saveAndRender(){
-  localStorage.setItem('victornzPhotos',JSON.stringify(photos));
-  renderPhotos();
-}
-
-function updateLines(){
-  document.querySelectorAll('.line').forEach(line=>line.remove());
-  const start=parseInt(getComputedStyle(gallery).getPropertyValue('--line-start'));
-  const gap=parseInt(getComputedStyle(gallery).getPropertyValue('--line-gap'));
-  const photosPerRow=2;
-  const totalRows=Math.ceil(photos.length/photosPerRow);
-  for(let i=0;i<totalRows;i++){
-    const startIndex=i*photosPerRow;
-    const endIndex=Math.min(startIndex+photosPerRow,photos.length);
-    const rowPhotos=photos.slice(startIndex,endIndex);
-    if(rowPhotos.length<2) continue;
-    const line=document.createElement('div'); line.className='line'; line.style.top=`${start+i*gap}px`;
-    gallery.appendChild(line);
-  }
-}
-
-// Tombol tambah
-addBtn.addEventListener('click',()=>{
-  if(!countNumber) return;
-  const fileName=prompt('Masukkan nama file foto (misal: foto.png):'); if(!fileName) return;
-  const title=prompt('Masukkan judul foto:')||'Tanpa Judul';
-  photos.push({url:fileName,title:title,date:new Date().toLocaleDateString()});
-  saveAndRender();
-});
-
-document.addEventListener('click',()=>{ document.querySelectorAll('.context-menu').forEach(m=>m.style.display='none'); currentMenu=null; });
-closeLightbox.addEventListener('click',()=>{ lightbox.style.display='none'; });
-
-renderPhotos();
-</script>
-</body>
+<html>
+  <head>
+    <title>Drive</title>
+  </head>
+  <body>
+    <h1>Test</h1>
+    <img src="https://drive.google.com/uc?export=view&id=1OhcMMu_uiahcLbFPOspWYsuQcqq54eJI" alt="Test" width="300">
+  </body>
 </html>
