--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Drive</title>
   </head>
   <body>
-    <h1>Test</h1>
-    <img src="https://drive.google.com/uc?export=view&id=1OhcMMu_uiahcLbFPOspWYsuQcqq54eJI" alt="Test" width="300">
+    <img src="https://drive.google.com/uc?export=view&id=1OhcMMu_uiahcLbFPOspWYsuQcqq54eJI" width="300">
   </body>
 </html>
